--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,8 @@
         <java.version>1.8</java.version>
         <kotlin.version>1.3.20</kotlin.version>
         <mybatis-plus.version>3.0.7.1</mybatis-plus.version>
-        <druid.version>1.1.10</druid.version>
+        <dynamic-datasource.version>2.5.0</dynamic-datasource.version>
+        <shiro.version>1.3.2</shiro.version>
     </properties>
 
     <repositories>
